--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>TimeTrax</title>
-  
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<html>
+    <head>
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        <!--Import Google Icon Font-->
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css"> 
+        <link rel="stylesheet" href="style.css">
+        <title>TimeTrax</title>    
+    </head>
+    <body>
+        <!-- This is where React will deploy the contents it generates -->
+        <div id="app"></div>
 
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-</head>
-
-<body>
-  <!-- This is where React will deploy the contents it generates -->
-  <div id="app"></div>
-
-  <!-- All of our JS code will be transpiled into this bundle.js file -->
-  <script src="bundle.js"></script>
-</body>
+        <!--Bundled file-->
+        <script src="bundle.js"></script>
+        <script src="init.js" type="text/javascript"></script>
+    
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
+    </body>
 </html>
