--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 
   <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
+  <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+</head>
 </head>
 
 <body>
   <!-- This is where React will deploy the contents it generates -->
   <div id="app"></div>
-
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
   <!-- All of our JS code will be transpiled into this bundle.js file -->
   <script src="bundle.js"></script>
 </body>
